--- a/index.html
+++ b/index.html
@@ -5,13 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vue Email List</title>
+    <!-- Chiamata alla libreria Axios - esecuzione chiamate asincrone -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/axios/0.20.0/axios.min.js">
     <!-- Collegamento file CSS -->
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
+    <div id="app">prova</div>
     
-    
+
 
     <!-- Collegamento CDN Vue JS -->
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
