--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vue Email List</title>
+    <!-- Font Awesome-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- Chiamata alla libreria Axios - esecuzione chiamate asincrone -->
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <!-- Collegamento file CSS -->
@@ -14,11 +16,15 @@
 <body>
         <!-- Inizio sezione con utilizzo Vue JS (id="app") -->
     <main id="app"> 
-        <div id="box_container">
+        <div class="main_container"></div>
+        <div class="box_container">
             <h1>{{ title }}</h1>
             <ul>
-                <li v-for="mail in email" class="scale"> {{ mail }}</li>
+                <li v-for="mail in email" class="hover"> {{ mail }}</li>
             </ul>
+            <div class="letter">
+                <i class="fa-regular fa-envelope"></i>
+            </div>
         </div>
     </main>
         <!-- Fine sezione con utilizzo Vue JS (id="app") -->
